# gitall

./: README.md  gitall.conf.default  gitall.py  pyproject.toml  setup.cfg  setup.py
gitall/: gitall.py
githelpers/: __init__.py  git.py  gitrepo.py
