[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "gitall"
authors = [
    {name = "Stefan Hepp", email = "stefan@stefant.org"},
]
description = "A tool to show the status and run git commands over multiple git repositories."
readme = "README.md"
requires-python = ">=3.7"
keywords = ["gitall"]
license = {text = "GPL-3"}
dependencies = [
    "colorama",
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control :: Git"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/stefanhepp/gitall/"
Repository = "https://github.com/stefanhepp/gitall/"

[project.scripts]
gitall = "gitall.gitall:main"

[tool.setuptools]
# Define python modules to package
packages = ["gitall", "githelpers"]

[tool.setuptools_scm]
# setuptools_scm 8.x changed this to 'version_file', but Debian still uses 7.x
write_to = "gitall/_version.py"
