[metadata]
name = gitall
version = 1.0.0
description=Gitall script to execute git commands on multiple git repositories
author=Stefan Hepp
author_email=stefan@stefant.org
url=https://github.com/stefanhepp/gitall/
license=GPL-3

[options]
packages =
    gitall
    githelpers
install_requires=
    colorama

[options.entry_points]
console_scripts =
    gitall = gitall.gitall:main
